Support Camel default route resource locations
Fixes #6733